--- a/.github/workflows/push-to-s3.yml
+++ b/.github/workflows/push-to-s3.yml
@@ -27,5 +27,5 @@ jobs:
           role-session-name: SyncToS3
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./content/html/ s3://${{ vars.AWS_WWW_BUCKET_NAME }}/ 
+       run: aws s3 sync ./content/html/ s3://${{ vars.AWS_BUCKET_NAME }}/ 
 
